Bug 299883 - Progress slider shows wrong position after restoring Amarok from tray when playback is paused
Summary: Progress slider shows wrong position after restoring Amarok from tray when pl...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.8.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 2.9
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-12 14:34 UTC by Alexander Kandaurov
Modified: 2014-05-08 00:06 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Kandaurov 2012-05-12 14:34:49 UTC
If you pause the playback while the main window is minimized to tray and then restore the window, the progress bar will show wrong position. The correct position will be displayed after you resume the playback.

It seems that the progress bar shows the position where it was before Amarok was minimized and doesn't update when the window is restored with playback paused.

Reproducible: Always
Comment 1 Myriam Schweingruber 2012-05-13 20:37:30 UTC
Which Amarok version is this about? Which Phonon backend and version do you use?
Comment 2 Alexander Kandaurov 2012-05-14 06:40:05 UTC
I use 2.5.0 with GStreamer backend.
Comment 3 Alexander Kandaurov 2012-05-14 07:40:51 UTC
The phonon-gstreamer version is 4.5.0, the bug is also reproducible with phonon-vlc 0.4.0.
Comment 4 Myriam Schweingruber 2012-05-14 15:06:37 UTC
Please use more recent phonon backends, current phonon-backend-gstreamer is 4.6.0, phonon-backend-vlc is 0.5.0. Make sure you restart KDE when changing backend else it is not activated.
Comment 5 Alexander Kandaurov 2012-05-14 18:26:45 UTC
Still reproducible with the latest backend versions.
Comment 6 Myriam Schweingruber 2012-05-15 00:23:06 UTC
Thank you for the feedback.
Comment 7 Mayank Madan 2012-11-30 12:13:11 UTC
Cant reproduce this bug in 2.6-git
Comment 8 Myriam Schweingruber 2012-11-30 13:25:04 UTC
This is fixed since 2.6, please upgrade.
Comment 9 Alexander Kandaurov 2012-12-01 07:27:19 UTC
This may be strange, but I can reproduce this in both 2.6 and 2.6-git. For this to be more clear, here are the exact steps:
1. Start the playback and minimize Amarok to tray.
2. Wait a while.
3. Pause the playback.
4. Restore the Amarok window.
5. Resume the playback. The progress slider must make a notable leap when you do this.
I have tested this under KDE 4.9.3 and Gnome 2.32.1.
Comment 10 Myriam Schweingruber 2012-12-01 12:30:13 UTC
Which toolbar are you using? I can't reproduce this here at all with the main toolbar. Also might be related to the phonon backend, I use the phonon-backend-vlc 0.6.0, so does Mayak Madan.
Comment 11 Alexander Kandaurov 2012-12-02 06:44:14 UTC
I use the main toolbar and phonon-vlc 0.6.1. I also succeeded to reproduce this bug on an (almost) default Ubuntu 12.10 installation with Amarok 2.6 and phonon-vlc 0.6.0.
Comment 12 Myriam Schweingruber 2012-12-02 11:50:40 UTC
Thank you for the fast feedback. Since both Mayank and I tested with the 2.6-git version which is several months ahead of 2.6.0, it would be nice if you could test again with Amarok 2.7 beta 1, which is due in about 1 week, or directly with 2.6 -git
Comment 13 Alexander Kandaurov 2012-12-18 09:26:15 UTC
Still can reproduce it with 2.6.90 on Gentoo.
Comment 14 Edward Hades 2012-12-20 11:32:05 UTC
Just reproduced with amarok v2.6.90-26-gbcdd84c

KDE Version: 4.9.3
Qt Version: 4.8.2
Phonon Version: 4.6.0
Phonon Backend: GStreamer (4.6.2)
Comment 15 Myriam Schweingruber 2012-12-20 11:49:59 UTC
Set status correctly.
Comment 16 Mikhail Ivchenko 2013-12-01 15:32:20 UTC
I can reproduce in v2.8.0
Comment 17 Abhay Sombanshi 2014-01-19 14:13:24 UTC
hello everyone,
I have worked on fixing this bug. Please review it.
https://git.reviewboard.kde.org/r/115122/ .
Thanks.
Comment 18 Dan Meltzer 2014-05-08 00:06:11 UTC
Git commit 84c15fdb0c3e7b854a7c7cdef417a54f5d3376ce by Daniel Meltzer.
Committed on 07/05/2014 at 23:23.
Pushed by dmeltzer into branch 'master'.

Update Track Position when returning from system tray after Pause.

Amarok wouldn't update the track position when restored from the system
tray.  This patch rememdies that. Patch by Abhay Sombanshi
<abhaysombanshi92@gmail.com>
CCMAIL: abhaysombanshi92@gmail.com
REVIEW: 115122

M  +3    -1    ChangeLog
M  +1    -0    src/toolbar/MainToolbar.cpp

http://commits.kde.org/amarok/84c15fdb0c3e7b854a7c7cdef417a54f5d3376ce