Update Track Position when returning from system tray after Pause.

Amarok wouldn't update the track position when restored from the system
tray.  This patch rememdies that. Patch by Abhay Sombanshi
<abhaysombanshi92@gmail.com>

BUG: 299883
CCMAIL: abhaysombanshi92@gmail.com
REVIEW: 115122